--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.11.0"
+  },
+  "dependencies": {
     "express": "^4.18.2",
     "typescript": "^5.3.3"
   }
